feat(animation): universal keyframes support for colors/transforms & AnimateFX integration
- Integrada a biblioteca AnimateFX com mais de 70 animações geridas pelo XplAnimationEngine (Maestro).
- Corrigido NullPointerException em animações complexas/3D através de escuta segura da Scene no ciclo de vida do nó.
- Implementada interpolação matemática de cores quadro a quadro para keyframes (background-color, color, border-color).
- Expandido o motor de transformações numéricas para suporte universal a propriedades diretas e compostas (scale, rotate, translate, e sintaxe transform).